--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
